src/routes/grid.css
.grid {
	white-space: nowrap;
	display: flex;
	flex-wrap: wrap;
	box-sizing: border-box;
	width: 100%;
	padding-left: 2em;
}
.grid .grid-item {
	padding-right: 2em;
	padding-bottom: 2em;
}
.grid .grid-item .grid-container {
	display: flex;
	flex-direction: column;
	width: 345px;
	cursor: pointer;
	position: relative;
}
.grid .grid-item img {
	width: 100%;
}
.grid .grid-item h2 {
	overflow: hidden;
	text-overflow: ellipsis;
	margin-top: 0;
	margin-bottom: 8px;
}
@media screen and (max-width: 785px) {
	h1 {
		font-size: 2.6em;
		margin-bottom: 1em;
	}
	.grid {
		flex-direction: column;
		align-items: center;
		padding-left: 0;
	}
	.grid .grid-item {
		width: 100%;
		padding-left: 2em;
		box-sizing: border-box;
	}
	.grid .grid-item .grid-container {
		flex-direction: row;
		width: 100%;
		justify-content: space-between;
		align-items: center;
		white-space: initial;
		box-sizing: border-box;
	}
	.grid .grid-item h2 {
		font-size: 1.3em;
		padding-right: 2em;
		flex: 1;
		text-align: center;
	}
	.grid .grid-item img {
		width: 50%;
	}
}
@media screen and (max-width: 520px) {
	.grid .grid-item h2 {
		font-size: 1.1em;
	}
}
@media screen and (max-width: 420px) {
	.grid .grid-item h2 {
		font-size: 1em;
	}
}

